--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -314,7 +314,7 @@ body.hasHover .tooltip {
   z-index: 80;
 
   background: #fff;
-  border-bottom: thin solid #eaeaea;
+  border-bottom: thin solid #eaeaea7e;
   line-height: 1.1;
 }
 
@@ -2202,7 +2202,6 @@ button:hover {
   .counter__wrapper
   .counter__item
   .counter__current {
-  font-weight: 600;
   /* text-decoration: underline;
 
   text-underline-position: from-font;
