--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -208,8 +208,9 @@ html.is-animating .transition-fade {
 }
 sup {
   vertical-align: super;
-  font-size: 60%;
+  font-size: 87.5%;
 }
+
 em {
   /* font-style: italic; */
   text-decoration: underline;
@@ -723,7 +724,7 @@ button:hover {
 #menu .menu__wrapper .menu__item.projectlist {
   padding-bottom: 0.25rem;
   font-size: 1rem;
-  line-height: 1.325;
+  line-height: 1.25;
 
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1102,7 +1103,7 @@ button:hover {
   --line-color: var(--black) */
 
   width: 100vw;
-  padding-top: calc(2.125rem + 10.5vw);
+  padding-top: calc(2.25rem + 10.5vw);
   padding-left: 0.125rem;
   padding-right: 0.125rem;
   display: -webkit-box;
@@ -3043,13 +3044,50 @@ body.dark #project .project__overview .project__layer__header {
   -ms-flex-direction: column;
   flex-direction: column;
 }
+
+#information .information__video {
+  padding: 0 5px;
+
+  margin-bottom: 2rem;
+ 
+}
+
+@media (min-width: 1200px) {
+  #information .information__video {
+    width: 75%;
+  }
+}
+
+#information .information__video video {
+  max-width: 420px;
+
+  border: 1px solid #ddd;
+}
+
+#information .information__video h1 {
+  max-width: 420px;
+
+  text-align: center;
+  font-size: 92.5%;
+}
+
+#information .information__video p {
+  max-width: 420px;
+
+  text-align: center;
+  font-style: italic;
+  font-size: 82.5%;
+  line-height: 2;
+  opacity: 0.75;
+}
+
 #information .information__item {
   display: block;
   padding-left: 5px;
   padding-bottom: 0;
 }
 #information .information__item.information__text {
-  font-size: 1.25rem;
+  font-size: 1rem;
 
   word-spacing: 0.25px;
   line-height: 1.5;
@@ -3239,13 +3277,13 @@ body.dark
 }
 @media only screen and (min-width: 700px) {
   #information .information__item.information__text {
-    font-size: calc(1.3rem + 0.6vw);
+    font-size: calc(0.75rem + 0.625vw);
     padding-bottom: calc(1.725rem + 5.7vw);
   }
 }
 @media only screen and (min-width: 700px) and (min-width: 1200px) {
   #information .information__item.information__text {
-    font-size: 1.5rem;
+    font-size: 1.125rem;
   }
 }
 @media only screen and (min-width: 700px) and (min-width: 1200px) {
@@ -3315,7 +3353,7 @@ body.dark
 }
 @media only screen and (min-width: 900px) {
   #information .information__cv__wapper {
-    width: 50%;
+    width: 75%;
   }
 }
 @media only screen and (min-width: 900px) {
@@ -3324,14 +3362,14 @@ body.dark
     padding-bottom: 0;
   }
   #information .information__item.information__text {
-    width: 75%;
-    padding-bottom: 4rem;
+    width: 50%;
+    padding-bottom: 3rem;
   }
   #information .information__item.information__text p {
     text-indent: 3rem;
   }
   #information .information__item.information__cv {
-    width: 100%;
+    width: 49.999%;
     padding-bottom: 0;
   }
   #information .information__item.information__cv.cv--right {
@@ -3356,7 +3394,7 @@ body.dark
     -webkit-box-direction: normal;
     -ms-flex-direction: row;
     flex-direction: row;
-    width: 60%;
+    width: 75%;
   }
   #information .information__item.information__text {
     width: calc(60% - 1rem);
@@ -3371,7 +3409,7 @@ body.dark
     padding-left: 83.3333%;
   }
   #information .information__cv__wapper {
-    width: 50%;
+    width: 75%;
   }
   #information .information__item.information__text {
     width: calc(50% - 1rem);
