--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3046,7 +3046,7 @@ body.dark #project .project__overview .project__layer__header {
 }
 
 #information .information__video {
-  padding: 0 5px;
+  padding: 0 7px 0 5px;
 
   margin-bottom: 2rem;
 }
