--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -805,6 +805,16 @@ button:hover {
   order: 3;
 }
 
+#menu .menu__wrapper .menu__item sup {
+  font-size: 62.5%;
+  background: #f6fbfc;
+  color: #45565C;
+
+  margin-left: 4px;
+  padding: 2px 6px;
+  border-radius: 3px;
+}
+
 #menu .menu__wrapper .menu__item.pages .menu_bottom {
   position: relative;
   padding-top: 0.75rem;
