--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -806,13 +806,13 @@ button:hover {
 }
 
 #menu .menu__wrapper .menu__item sup {
-  font-size: 62.5%;
-  background: #f6fbfc;
-  color: #45565C;
+  font-size: 60%;
+  background: #ffffff90;
+  color: #333;
 
   margin-left: 4px;
-  padding: 2px 6px;
-  border-radius: 3px;
+  padding: 2px 5px;
+
 }
 
 #menu .menu__wrapper .menu__item.pages .menu_bottom {
