--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -623,6 +623,7 @@ body.dark #menu {
   filter: brightness(50%); */
 
   /* mix-blend-mode: darken; */
+  background: #333;
 }
 
 #menu .menu--close {
@@ -1276,7 +1277,7 @@ button:hover {
   .item__text
   .item__count
   .item__imgnumber {
-  font-weight: 600;
+  font-weight: 500;
   /* text-decoration: underline;
 
   text-underline-position: from-font;
@@ -3038,12 +3039,17 @@ body.dark #project .project__overview .project__layer__header {
     padding-top: 14rem;
   }
 }
+
+#information a {
+  padding-left: 0.375rem;
+}
+
 #information a,
 #information a:visited,
 #information a:active {
-  /* font-style: italic; */
-  text-decoration: underline;
+  font-style: italic;
 }
+
 #information .information__cv__wapper {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -3070,7 +3076,6 @@ body.dark #project .project__overview .project__layer__header {
 #information .information__video iframe {
   max-width: 420px;
   width: 100%;
-
 }
 
 #information .information__video h1 {
@@ -3096,7 +3101,7 @@ body.dark #project .project__overview .project__layer__header {
   padding-bottom: 0;
 }
 #information .information__item.information__text {
-  font-size: 1rem;
+  font-size: 1.1rem;
 
   word-spacing: 0.25px;
   line-height: 1.5;
@@ -3292,7 +3297,7 @@ body.dark
 }
 @media only screen and (min-width: 700px) and (min-width: 1200px) {
   #information .information__item.information__text {
-    font-size: 1.125rem;
+    font-size: 1.25rem;
   }
 }
 @media only screen and (min-width: 700px) and (min-width: 1200px) {
