--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1101,8 +1101,8 @@ button:hover {
 
   /* display: none; */
 
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-  letter-spacing: 0.025em;
+  /* font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif; */
+  letter-spacing: 0.005em;
   font-size: 75%;
 }
 #mapping__header .mapping__sort:hover {
