--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2028,6 +2028,112 @@ button:hover {
   -webkit-transition-duration: 170ms;
   transition-duration: 170ms;
 }
+
+/* // project load info */
+
+.project__loading {
+  position: fixed;
+
+  width: 100vw;
+  height: 100vh;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+
+  background: #fff;
+  z-index: 100001;
+}
+
+.load__info {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  margin: 0 auto;
+}
+
+.zoom,
+.swipe {
+  display: flex;
+  flex-direction: column;
+  justify-items: center;
+  align-items: center;
+
+  text-align: center;
+
+  margin: 0 auto 3rem;
+}
+
+.swipe {
+  margin: 0 auto 1.5rem;
+}
+
+.zoom p,
+.swipe p {
+  opacity: 0;
+  width: 34ch;
+
+  text-align: center;
+  font-size: 0.8rem;
+  line-height: 1.3;
+  word-break: keep-all;
+
+  margin-top: 0.625rem;
+  color: #000;
+}
+
+.load__info p > span {
+  display: block;
+}
+
+/* .swipe > span {
+  opacity: 0;
+  position: absolute;
+
+  color: #000;
+}
+
+.swipe > span:nth-of-type(1) {
+  left: 3rem;
+}
+.swipe > span:nth-of-type(2) {
+  right: 3rem;
+} */
+
+.load__info img {
+  opacity: 0;
+  width: 2rem;
+}
+.load__info img.zoom-finger {
+  transform: translateY(100%);
+}
+.load__info img.swipe-finger-1 {
+  position: absolute;
+  transform: translateX(-200%);
+}
+.load__info img.swipe-finger-2 {
+  transform: translateX(200%);
+}
+
+.load__info button {
+  position: relative;
+
+  padding: 0.25rem 1rem;
+  background: #000;
+  color: #fff;
+  outline: none;
+  border: none;
+
+  cursor: pointer;
+}
+
+@media (min-width: 1400px) {
+  .load__info {
+    display: none;
+  }
+}
+
 #project .project__images .images__slideshow:hover {
   cursor: none;
 }
