--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2066,20 +2066,20 @@ button:hover {
 }
 
 .swipe {
-  margin: 0 auto 1.5rem;
+  margin: 0 auto 2rem;
 }
 
 .zoom p,
 .swipe p {
   opacity: 0;
-  width: 34ch;
+  width: 21ch;
 
   text-align: center;
-  font-size: 0.8rem;
-  line-height: 1.3;
+  font-size: 0.85rem;
+  line-height: 1.35;
   word-break: keep-all;
 
-  margin-top: 0.625rem;
+  margin-top: 1rem;
   color: #000;
 }
 
@@ -2117,9 +2117,11 @@ button:hover {
 }
 
 .load__info button {
-  position: relative;
+  position: absolute;
 
-  padding: 0.25rem 1rem;
+  bottom: 2rem;
+
+  padding: 0.25rem 1.25rem;
   background: #000;
   color: #fff;
   outline: none;
