--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -323,7 +323,7 @@ dialog button {
   right: 0.5rem;
 
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-  font-size: 75%;
+  font-size: 50%;
 
   box-shadow: none;
   border: none;
@@ -2108,7 +2108,7 @@ button:hover {
   transform: translateY(75%);
 }
 .load__info img.swipe-finger-1 {
-position: absolute;
+  position: absolute;
   transform: translateX(-225%);
 }
 .load__info img.swipe-finger-2 {
@@ -2607,6 +2607,25 @@ position: absolute;
     #95a59b 100%
   );
 }
+
+.readmore__wrapper .readmore__button {
+  position: absolute;
+  transform: translateX(-50%);
+  left: 50%;
+  bottom: -0rem;
+
+  margin: 0 auto;
+
+  font-size: 0.66rem;
+  text-align: center;
+  text-indent: initial;
+  mix-blend-mode:hard-light;
+
+  padding: 0.125rem 0.375rem;
+  background: #f0f0f070;
+  border-radius: 2.5px;
+}
+
 #project .project__overview {
   z-index: 60;
   background: #fff;
